# nokia-test-task

./: CMakeLists.txt  README.md  cell.cpp  cell.h  errors.h  main.cpp  table.cpp  table.h  utils.h
include/: cell.h  csvio.h  errors.h  expressionhandler.h  operator.h  table.h  utils.h
sources/: README.md  cell.cpp  csvio.cpp  expressionhandler.cpp  main.cpp  operator.cpp  table.cpp  utils.cpp
tests/: 1.1 WrongHeadersFormat.csv  1.2 WrongRowNumberFormat.csv  1.3 WrongCellDataFormat.csv  1.4 WrongRowSize.csv  2.1 IdenticalHeaders.csv  2.2 IdenticalRows.csv  3.1 WrongCellAdress - Column.csv  3.2 WrongCellAdress - Row.csv  4.1 OperatorsTest.csv  4.2 DivisionByNull.csv  5.1 ChainCellsTest.csv  5.2 ExpressionLoop.csv
